# ghub-presets-ownership-toolkit-g502

./: .gitignore  DISCLAIMER.md  NOTICE.md  README.md  SECURITY.md  START_HERE.md  ghub-presets  ghub-presets.bat  pyproject.toml
Executables/mac/: 0 Setup (run once).command  0 Setup admin sudo (once).command  0b Quit G Hub (menu bar).command  0c Block G Hub Updates.command  0d Unblock G Hub Updates.command  1 Export from G Hub.command  2 Pull from Mouse.command  3 Import to G Hub.command  4 Replace G Hub with Presets.command  Publish to GitHub.command  README.txt
Executables/windows/: 0 Setup (run once).bat  0b Quit G Hub (background).bat  0c Block G Hub Updates.bat  0d Unblock G Hub Updates.bat  1 Export from G Hub.bat  2 Pull from Mouse.bat  3 Import to G Hub.bat  4 Replace G Hub with Presets.bat  Publish to GitHub.bat  README.txt
Presets/: README.txt
Presets/_system/: README.txt
Toolkit Data/system/: README.txt
ghub_presets/: ROSETTA.md  __main__.py  builtin_cards.py  compare.py  convert.py  db.py  devices.py  export.py  ghub_running.py  import_.py  library.py  manifest.py  paths.py  platform_remap.py  preset_format.py  pull.py  rosetta.py  system_profile.py  update_blocker.py  update_blocker_common.py  update_blocker_mac.py  update_blocker_win.py
ghub_presets/bundled/: DONT_TOUCH_SYSTEM.lghub-preset.json
ghub_presets/omm/: FeatureOnboardProfile.py  HidppConstants.py  HidppMacro.py  HidppProfile.py  LogiHPP20.py  hid_compat.py
native/: macos_hidpp_probe.c
scripts/: ghub-admin.sh  install-admin-sudo.sh  publish_to_github.sh  toolkit.bat  toolkit.sh
