[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ghub-presets"
version = "1.0.0"
description = "Export, import, and pull Logitech G Hub mouse profiles"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hidapi>=0.14.0",
]

[project.scripts]
ghub-presets = "ghub_presets.__main__:main_entry"

[tool.setuptools.packages.find]
where = ["."]
include = ["ghub_presets*"]
